--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,17 @@
 	-moz-box-shadow:    inset 0px -20px 20px 0px rgba(0, 0, 0, 1);
 	box-shadow:         inset 0px -20px 20px 0px rgba(0, 0, 0, 1);
 }
+
+#header-involved {
+    background-color: #7a36b1;
+    background-image: linear-gradient(to right bottom, #4c158a, #ad65d6);
+    color: #fff;
+}
+
+#text-justified {
+    text-align: justify;
+}
+
 #nav-gc {
 	border: 0px;
 	width: 60%;
@@ -62,11 +73,31 @@
 
 .titlep-desc {
 	font: 200 1.8em/1 Raleway, Sans;
+    text-align: justify;
 	letter-spacing: -1px;
 	margin-top: -1%;
 	margin-bottom: -4%;
     margin-left: 12%;
     margin-right: 12%;
+}
+
+.title-involved {
+    color: #FFFFFF;
+    font: 200 2em/1 Raleway, Sans;
+	text-shadow: 0px -2px 2px rgba(50, 50, 50, 1);
+	margin-top: 20%;
+    text-align: center;
+}
+
+.titlep-involved {
+    color: #FFFFFF;
+	font: 200 1.4em/1 Raleway, Sans;
+    text-align: justify;
+	letter-spacing: -1px;
+	margin-top: 4%;
+	margin-bottom: 4%;
+    margin-left: 6%;
+    margin-right: 6%;
 }
 
 .mobile-header {
@@ -97,6 +128,12 @@
 	width: 	50px;
 	height: 50px;
 	margin-left: -75%;
+}
+
+.navbar-involved {
+    background-color: #7a36b1;
+    background-image: linear-gradient(to right bottom, #4c158a, #ad65d6);
+    color: #ffbf2a!important;
 }
 
 .button-dl {
@@ -191,14 +228,10 @@
 }
 
 .button-involved {
-    background: rgba(23,147,214,1);
-    background: -moz-linear-gradient(top, rgba(23,147,214,1) 0%, rgba(37,103,133,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(23,147,214,1)), color-stop(100%, rgba(37,103,133,1)));
-    background: -webkit-linear-gradient(top, rgba(23,147,214,1) 0%, rgba(37,103,133,1) 100%);
-    background: -o-linear-gradient(top, rgba(23,147,214,1) 0%, rgba(37,103,133,1) 100%);
-    background: -ms-linear-gradient(top, rgba(23,147,214,1) 0%, rgba(37,103,133,1) 100%);
-    background: linear-gradient(to bottom, rgba(23,147,214,1) 0%, rgba(37,103,133,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1793d6', endColorstr='#256785', GradientType=0 );
+    background-color: #64b9f1;
+    background-image: linear-gradient(to bottom,#4ca7e4,#328ecc);
+    color: #fff;
+    text-shadow: 0 1px rgba(0,0,0,.3);
     display: block;
     padding: 0;
     height: 46px;
@@ -209,11 +242,62 @@
     position: absolute;
     left: 50%;
     z-index: 1;
-    border: 1px solid #093447;
+    border: 1px solid #337cac;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
     font-family: 'Open Sans', Sans;
     font-size: 24px;
+}
+
+.button-github {
+    max-width: 100%;
+    background-image: linear-gradient(to bottom, #4d4d4d, #333);
+    border-color: rgba(0, 0, 0, .8);
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .02), inset 0 1px 0 0 rgba(255, 255, 255, .2), inset 0 -1px 0 0 rgba(255, 255, 255, .05), 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .23);
+    overflow: hidden;
+    padding-left: 80px!important;
+    position: relative;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #fff;
+    text-shadow: 0 1px rgba(0,0,0,.3);
+    display: inline-block;
+    -webkit-appearance: none;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+    margin: 24px;
+    outline: none;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.button-github::before {
+    position: absolute;
+    font-family: 'Font Awesome\ 5 Brands';
+    top: calc(50% - 40px);
+    left: -12px;
+    top: -30px;
+    content: "\f09b";
+    font-size: 80px;
+    box-sizing: inherit;
+}
+
+.button-github:hover {
+    text-decoration: none;
+    color: #fff;
+    margin-top: 22px!important;
+    margin-bottom: 26px!important;
+    -webkit-box-shadow: 0px 6px 24px -6px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 6px 24px -6px rgba(0,0,0,1);
+    box-shadow: 0px 6px 24px -6px rgba(0,0,0,1);
+}
+
+.button-github:visited, .button-github:active, .button-github:enabled {
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 .line-dl {
@@ -224,18 +308,35 @@
 	color: #FF0000;
 }
 
+#header-involved ul li a.activo {
+    color: #ffbf2a;
+}
+
 #header-gc ul li a.activo {
 	color: #FF0000;
-	/*background-color: rgba(0,0,0,0.5);
-	border-radius: 0px;
-	border-bottom: 4px solid #FFFFFF;
-	border-left: 1px solid #FFFFFF;
-	border-right: 1px solid #FFFFFF;*/
 }
 
 #myNavbar ul li a#activo {
 	color: #FF0000;
 }
+
+/* ------- INVOLVED NAVBAR MOBILE ---------- */
+#myNavbarInv {
+    background-color: #401666
+}
+
+#myNavbarInv ul li a {
+    color: #FFFFFF;
+}
+
+#myNavbarInv ul li a:hover {
+	color: #ffbf2a;
+}
+
+#myNavbarInv ul li a#activo {
+	color: #ffbf2a;
+}
+
 
 #main-description h1 {
 	color: #222;
@@ -250,11 +351,10 @@
 	list-style: none;
 	margin: 0.5em 0;
 	padding: 0 10px;
-	text-align: center;
 }
 
 #characteristics {
-	margin-top: 50px;
+	margin-top: 32px;
 }
 
 #characteristics h2 {
@@ -271,11 +371,27 @@
 	margin: 0.5em 0;
 	padding: 0 10px;
 	text-align: center;
+    display: inline-block;
 }
 
 .char-img {
 	width:  80px;
 	height: 80px;
+}
+
+.characteristics-container {
+    padding: 60px 18px 53px 18px;
+    margin: 15px 12px 0px 0px;
+    background-color: #ffffff;
+    border-style: solid;
+    border-width: 6px 0px 0px 0px;
+    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.05);
+    float: left;
+    display: inline-block;
+}
+
+.characteristics-container p {
+    text-align: justify!important;
 }
 
 #gc-desc h2 {
@@ -291,7 +407,7 @@
 	list-style: none;
 	margin: 0.5em 0;
 	padding: 0 10px;
-	text-align: center;
+	text-align: justify;
 }
 
 #gc-footer {
@@ -317,4 +433,5 @@
 	list-style: none;
 	margin: 0.5em 0;
 	padding: 0 10px;
+    text-align: justify;
 }
