--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,18 @@
     color: #fff;
 }
 
+#header-contactus {
+    background: rgba(238,255,0,1);
+    background: -moz-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(238,255,0,1)), color-stop(100%, rgba(255,170,0,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: linear-gradient(135deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeff00', endColorstr='#ffaa00', GradientType=1 );
+    color: #0e0e0e;
+}
+
 #text-justified {
     text-align: justify;
 }
@@ -57,10 +69,10 @@
 	background-color: rgba(0,0,0,0);
 }
 
-#nav-gc li a:hover {
+#nav-gc li a:hover, .nav-contactus li a:hover {
 	border: 0px;
 	background-color: rgba(0,0,0,0);
-	color: #FF0000;
+	color: #FF0000!important;
 }
 
 .nav-involved li a:hover {
@@ -71,6 +83,13 @@
 	border: 0px;
 	background-color: rgba(0,0,0,0);
 	color: #FFF;
+}
+
+/* ------------- NAVBAR CONTACTUS -------------- */
+.nav-contactus li a {
+    border: 0px;
+	color: #0A0A0A!important;
+	background-color: rgba(0,0,0,0);
 }
 
 .title-header {
@@ -117,6 +136,35 @@
     margin-right: 6%;
 }
 
+.title-contactus {
+    color: #000!important;
+    font: 200 1.8em/1 Raleway, Sans;
+	text-shadow: 0px -2px 2px rgba(50, 50, 50, 1);
+	margin-top: 20%;
+    text-align: center;
+}
+
+.titlep-contactus {
+    color: #0F0F0F;
+	font: 200 1.4em/1 Raleway, Sans;
+    text-align: justify;
+	letter-spacing: -1px;
+    text-shadow: 0px 1px 1px rgba(50, 50, 50, 1);
+	margin-top: 4%;
+	margin-bottom: 4%;
+    margin-left: 6%;
+    margin-right: 6%;
+}
+
+#toggle-contactus .icon-bar {
+    color: #0F0F0F!important;
+    background-color: #0F0F0F!important;
+}
+
+#toggle-contactus:hover {
+    background-color: #ff6f00;
+}
+
 .mobile-header {
 	list-style: none;
 }
@@ -154,15 +202,27 @@
 }
 
 .navbar-about {
-    background: rgba(130,0,0,1);
-    background: -moz-radial-gradient(center, ellipse cover, rgba(130,0,0,1) 0%, rgba(14,14,14,1) 100%);
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(130,0,0,1)), color-stop(100%, rgba(14,14,14,1)));
-    background: -webkit-radial-gradient(center, ellipse cover, rgba(130,0,0,1) 0%, rgba(14,14,14,1) 100%);
-    background: -o-radial-gradient(center, ellipse cover, rgba(130,0,0,1) 0%, rgba(14,14,14,1) 100%);
-    background: -ms-radial-gradient(center, ellipse cover, rgba(130,0,0,1) 0%, rgba(14,14,14,1) 100%);
-    background: radial-gradient(ellipse at center, rgba(130,0,0,1) 0%, rgba(14,14,14,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#820000', endColorstr='#0e0e0e', GradientType=1 );
+    background: rgba(14,14,14,1);
+    background: -moz-linear-gradient(-45deg, rgba(14,14,14,1) 0%, rgba(130,0,0,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(14,14,14,1)), color-stop(100%, rgba(130,0,0,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(14,14,14,1) 0%, rgba(130,0,0,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(14,14,14,1) 0%, rgba(130,0,0,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(14,14,14,1) 0%, rgba(130,0,0,1) 100%);
+    background: linear-gradient(135deg, rgba(14,14,14,1) 0%, rgba(130,0,0,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0e0e', endColorstr='#820000', GradientType=1 );
     color: #ffbf2a!important;
+}
+
+.navbar-contactus {
+    background: rgba(238,255,0,1);
+    background: -moz-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(238,255,0,1)), color-stop(100%, rgba(255,170,0,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    background: linear-gradient(135deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeff00', endColorstr='#ffaa00', GradientType=1 );
+    color: #0e0e0e;
 }
 
 .button-dl {
@@ -266,8 +326,8 @@
     height: 46px;
     line-height: 44px;
     width: 214px;
-    margin: 0 0 0 -107px;
-    margin-top: -23px;
+    margin: -12px 0 0 -107px;
+    margin-top: -12px;
     position: absolute;
     left: 50%;
     z-index: 1;
@@ -276,6 +336,14 @@
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
     font-family: 'Open Sans', Sans;
     font-size: 24px;
+}
+
+.button-involved:hover {
+    margin-top: -14px;
+    margin-bottom: 2px;
+    -webkit-box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
+    box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
 }
 
 .button-github {
@@ -377,20 +445,60 @@
     text-decoration: none;
 }
 
+.button-sendmessage {
+    max-width: 100%;
+    background-image: linear-gradient(to bottom, #5c7cfa, #294299);
+    border-color: rgba(0, 0, 0, .8);
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .02), inset 0 1px 0 0 rgba(255, 255, 255, .2), inset 0 -1px 0 0 rgba(255, 255, 255, .05), 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .16);
+    overflow: hidden;
+    padding-left: 80px!important;
+    position: relative;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #f8f9fa!important;
+    text-shadow: 0 1px rgba(0,0,0,.3);
+    display: inline-block;
+    -webkit-appearance: none;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+    margin: 24px;
+    outline: none;
+    padding: 16px 64px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.button-sendmessage:hover {
+    text-decoration: none;
+    color: #f8f9fa;
+    margin-top: 22px!important;
+    margin-bottom: 26px!important;
+    -webkit-box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
+    box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
+}
+
+.button-sendmessage:visited, .button-sendmessage:active, .button-sendmessage:enabled {
+    color: #f8f9fa;
+    text-decoration: none!important;
+}
+
 .line-dl {
 	margin-bottom: 0px;
 }
 
-#myNavbar ul li a:hover {
-	color: #FF0000;
+#myNavbar ul li a:hover, #myNavbarAbout ul li a:hover {
+	color: #FF0000!important;
 }
 
 #header-involved ul li a.activo, #header-about ul li a.activo {
     color: #ffbf2a;
 }
 
-#header-gc ul li a.activo {
-	color: #FF0000;
+#header-gc ul li a.activo, #header-contactus ul li a.activo {
+	color: #FF0000!important;
 }
 
 #myNavbar ul li a#activo {
@@ -399,28 +507,41 @@
 
 /* ------- INVOLVED NAVBAR MOBILE ---------- */
 #myNavbarInv {
-    background-color: #401666
+    background-color: #401666!important;
 }
 
 #myNavbarInv ul li a {
     color: #FFFFFF;
 }
 
-#myNavbarInv ul li a:hover, #myNavbarInv ul li a:hover {
+#myNavbarInv ul li a:hover, #myNavbarAbout ul li a:hover {
 	color: #ffbf2a;
 }
 
-#myNavbarInv ul li a#activo, myNavbarInv ul li a#activo {
+#myNavbarInv ul li a#activo, #myNavbarAbout ul li a#activo {
 	color: #ffbf2a;
 }
 
 /* ------- ABOUT NAVBAR MOBILE ---------- */
-#myNavbarInv {
-    background-color: #0e0e0e
+#myNavbarAbout {
+    background-color: #820000;
 }
 
-#myNavbarInv ul li a {
+#myNavbarAbout ul li a {
     color: #FFFFFF;
+}
+
+/* ------- CONTACT US - NAVBAR MOBILE ---------- */
+#myNavbarContactus {
+    background-color: #ff6f00!important;
+}
+
+#myNavbarContactus ul li a {
+    color: #000;
+}
+
+#myNavbarContactus ul li a#activo {
+	color: #FF0000!important;
 }
 
 #main-description h1 {
