--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,30 @@
     color: #0e0e0e;
 }
 
+#header-paymentok {
+    background: rgba(164,179,87,1);
+    background: -moz-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(164,179,87,1)), color-stop(100%, rgba(117,137,12,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: linear-gradient(135deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c', GradientType=1 );
+    color: #fff;
+}
+
+#header-paymentproc {
+    background: rgba(73,155,234,1);
+    background: -moz-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(73,155,234,1)), color-stop(100%, rgba(32,124,229,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: linear-gradient(135deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=1 );
+    color: #fff;
+}
+
 #text-justified {
     text-align: justify;
 }
@@ -75,7 +99,7 @@
 	color: #FF0000!important;
 }
 
-.nav-involved li a:hover {
+#header-involved ul li a:hover, #header-paymentproc ul li a:hover, #header-paymentok ul li a:hover {
     color: #ffbf2a!important;
 }
 
@@ -149,7 +173,17 @@
 	font: 200 1.4em/1 Raleway, Sans;
     text-align: justify;
 	letter-spacing: -1px;
-    text-shadow: 0px 1px 1px rgba(50, 50, 50, 1);
+	margin-top: 4%;
+	margin-bottom: 4%;
+    margin-left: 6%;
+    margin-right: 6%;
+}
+
+.titlep-paymentok {
+    color: #FFFFFF;
+	font: 200 1.4em/1 Raleway, Sans;
+    text-align: justify;
+	letter-spacing: -1px;
 	margin-top: 4%;
 	margin-bottom: 4%;
     margin-left: 6%;
@@ -223,6 +257,30 @@
     background: linear-gradient(135deg, rgba(238,255,0,1) 0%, rgba(255,170,0,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeff00', endColorstr='#ffaa00', GradientType=1 );
     color: #0e0e0e;
+}
+
+.navbar-paymentok {
+    background: rgba(164,179,87,1);
+    background: -moz-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(164,179,87,1)), color-stop(100%, rgba(117,137,12,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    background: linear-gradient(135deg, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c', GradientType=1 );
+    color: #fff;
+}
+
+.navbar-paymentproc {
+    background: rgba(73,155,234,1);
+    background: -moz-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(73,155,234,1)), color-stop(100%, rgba(32,124,229,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    background: linear-gradient(135deg, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=1 );
+    color: #fff;
 }
 
 .button-dl {
@@ -527,13 +585,13 @@
     background-color: #820000;
 }
 
-#myNavbarAbout ul li a {
+#myNavbarAbout ul li a, #myNavbarPaymentOK ul li a {
     color: #FFFFFF;
 }
 
 /* ------- CONTACT US - NAVBAR MOBILE ---------- */
 #myNavbarContactus {
-    background-color: #ff6f00!important;
+    background-color: #ffaa00!important;
 }
 
 #myNavbarContactus ul li a {
@@ -542,6 +600,15 @@
 
 #myNavbarContactus ul li a#activo {
 	color: #FF0000!important;
+}
+
+/* ------- PAYMENT OK - NAVBAR MOBILE ---------- */
+#myNavbarPaymentOK {
+    background-color: #75890c;
+}
+
+#myNavbarPaymentOK ul li a:hover {
+	color: #ffbf2a;
 }
 
 #main-description h1 {
