--- a/css/main.css
+++ b/css/main.css
@@ -283,12 +283,12 @@
     color: #fff;
 }
 
-.blue-ar-l-rn-none img {
+.mpago-btn img {
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .02), inset 0 1px 0 0 rgba(255, 255, 255, .2), inset 0 -1px 0 0 rgba(255, 255, 255, .05), 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .16);
     border-radius: 8px;
 }
 
-.blue-ar-l-rn-none img:hover {
+.mpago-btn img:hover {
     -webkit-box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
     box-shadow: 0px 6px 24px -6px rgba(0,0,0,0.75);
